--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -14,7 +14,7 @@
       content: '';
       width: 100px;
       height: 3px;
-      background-color: pink;
+      background-color: #436f70;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -26,8 +26,7 @@
 form {
   margin-bottom: 50px;
   input, button {
-    
-    border: none;
+
     padding: 12px 15px;
     border-radius: 3px;
     font-size: 16px;
@@ -46,12 +45,16 @@ form {
     }
   }
   button {
-    background-color: purple;
-    border: 2px solid purple;
+    background-color: #304f50;
+    border: 2px solid #304f50;
     color: white;
     margin-left: 15px;
     min-width: 100px;
     cursor: pointer;
+    &:hover, &:focus {
+      background-color: #436f70;
+      border: 2px solid #436f70;
+    }
   }
 }
 
@@ -69,11 +72,12 @@ form {
         margin-top: 5px;
       }
       &.alert {
-        background-color:green;
+        background-color:lightpink;
         border-radius: 3px;
         color: white;
-        font-size: 14px;
+        font-size: 12px;
         margin-top: 10px;
+        padding: 3px 10px;
       }
     }
     &.color-light {
