--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -31,7 +31,7 @@ form {
     border-radius: 3px;
     font-size: 16px;
     &:focus {
-      border: none;
+      
       outline: none;
     }
     
@@ -40,6 +40,9 @@ form {
   input {
     background-color: white;
     border: 2px solid transparent;
+    &:focus {
+      border: 2px solid transparent;
+    }
     &.error {
       border: 2px solid red;
     }
